--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ footer {
     <header>
         <h1>Muhyi Sadewo</h1>
         <p>Saya adalah seorang web developer dengan minat dalam desain responsif dan pengembangan front-end.</p>
-        <img src="path/to/your/profile-picture.jpg" alt="Foto Profil Muhyi Sadewo">
+        <img src="https://drive.google.com/file/d/1Oy-mEdDSyXQUcL1lxEVS-NRcaetzMBrl/view?usp=drivesdk" alt="Foto Profil Muhyi Sadewo">
     </header>
 
     <nav>
