--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ section {
 }
 
 footer {
-    background: red;
+    background: #eaeaea;
     color: #fff;
     text-align: center;
     padding: 1em 0;
