--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    hight: 10px;
+    height: 10px;
 }
 
     </style>
@@ -85,7 +85,6 @@ footer {
             <li><a href="#about">Tentang Saya</a></li>
             <li><a href="#portfolio">Portofolio</a></li>
             <li><a href="#contact">Kontak</a></li>
-            <li><a href="#login">Login</a></li>
         </ul>
     </nav>
 
@@ -107,13 +106,13 @@ footer {
             <h3>Buat Portofolio Pribadi</h3>
             <p>Silahkan dicoba</p>
             <p>Teknologi yang Digunakan: HTML, CSS, JavaScript</p>
-            <p>Status: Offline</p>
+            <p>Status: Online</p>
         </div>
         <div class="project">
             <h3>Notebook</h3>
             <p>Silahkan dicoba</p>
             <p>Teknologi yang Digunakan: HTML, CSS, JavaScript</p>
-            <p>Status: Offline</p>
+            <p>Status: Online</p>
         </div>
     </section>
 
