--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ section {
 
 footer {
     background: #eaeaea;
-    color: #fff;
+    color: black;
     text-align: center;
     padding: 1em 0;
     position: fixed;
