--- a/index.html
+++ b/index.html
@@ -7,77 +7,171 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         /* styles.css */
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    line-height: 1.6;
-}
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
+            color: #333;
+            background-color: #f9f9f9;
+        }
 
-header {
-    background: #333;
-    color: #fff;
-    padding: 1em 0;
-    text-align: center;
-}
+        header {
+            background: #1e2a38;
+            color: #fff;
+            padding: 2em 1em;
+            text-align: center;
+            position: relative;
+            overflow: hidden;
+        }
 
-header img {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-}
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
 
-nav {
-    background: #444;
-    color: #fff;
-    padding: 1em;
-    text-align: center;
-}
+        header p {
+            font-size: 1.2em;
+        }
 
-nav ul {
-    list-style: none;
-    padding: 0;
-}
+        header img {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            border: 5px solid #fff;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            margin-top: 1em;
+        }
 
-nav ul li {
-    display: inline;
-    margin: 0 1em;
-}
+        nav {
+            background: #34495e;
+            color: #fff;
+            padding: 1em;
+            text-align: center;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
 
-nav ul li a {
-    color: #fff;
-    text-decoration: none;
-}
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+        }
 
-section {
-    padding: 2em;
-    margin: 2em 0;
-}
+        nav ul li {
+            margin: 0 1em;
+        }
 
-#portfolio .project {
-    border: 1px solid #ddd;
-    padding: 1em;
-    margin: 1em 0;
-}
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 1.1em;
+            transition: color 0.3s;
+        }
 
-footer {
-    background: #eaeaea;
-    color: black;
-    text-align: center;
-    padding: 1em 0;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 10px;
-}
+        nav ul li a:hover {
+            color: #1abc9c;
+        }
 
+        section {
+            padding: 2em 1em;
+            margin: 2em auto;
+            max-width: 1200px;
+        }
+
+        section h2 {
+            font-size: 2em;
+            margin-bottom: 0.5em;
+            color: #1e2a38;
+        }
+
+        #portfolio .project {
+            background: #fff;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            padding: 1.5em;
+            margin: 1em 0;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        #portfolio .project:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+        }
+
+        footer {
+            background: #1e2a38;
+            color: #fff;
+            text-align: center;
+            padding: 1em 0;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+
+        footer p {
+            margin: 0;
+        }
+
+        form {
+            display: grid;
+            gap: 1em;
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
+        form label {
+            font-weight: bold;
+        }
+
+        form input, form textarea {
+            padding: 0.5em;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            font-size: 1em;
+        }
+
+        form button {
+            background: #1abc9c;
+            color: #fff;
+            border: none;
+            padding: 0.7em 1.5em;
+            border-radius: 4px;
+            font-size: 1em;
+            cursor: pointer;
+            transition: background 0.3s;
+        }
+
+        form button:hover {
+            background: #16a085;
+        }
+
+        @media (max-width: 768px) {
+            header img {
+                width: 100px;
+                height: 100px;
+            }
+
+            nav ul {
+                flex-direction: column;
+            }
+
+            nav ul li {
+                margin: 0.5em 0;
+            }
+        }
     </style>
 </head>
 <body>
     <header>
         <h1>Muhyi Sadewo</h1>
-        <p>Saya adalah seorang web developer dengan minat dalam desain responsif dan pengembangan front-end.</p>
-        <img src="https://drive.google.com/file/d/1Oy-mEdDSyXQUcL1lxEVS-NRcaetzMBrl/view?usp=drivesdk" alt="Foto Profil Muhyi Sadewo">
+        <p>Selamat datang di situs MUHYI SADEWO,</p>
+        <img src="https://drive.google.com/uc?export=view&id=1Oy-mEdDSyXQUcL1lxEVS-NRcaetzMBrl" alt="Foto Profil Muhyi Sadewo">
+
     </header>
 
     <nav>
@@ -128,11 +222,6 @@ footer {
             <textarea id="message" name="message"></textarea>
             <button type="submit">Kirim</button>
         </form>
-    </section>
-
-    <section id="login">
-        <h2>Login</h2>
-        <button onclick="alert('Fitur ini belum tersedia')">Login</button>
     </section>
 
     <footer>
