--- a/index.html
+++ b/index.html
@@ -107,14 +107,29 @@
             background: #1e2a38;
             color: #fff;
             text-align: center;
-            padding: 1em 0;
+            padding: 2em 1em;
             position: relative;
             bottom: 0;
             width: 100%;
         }
 
         footer p {
-            margin: 0;
+            margin: 0 0 1em;
+        }
+
+        footer .social-links {
+            margin: 1em 0;
+        }
+
+        footer .social-links a {
+            color: #fff;
+            margin: 0 0.5em;
+            text-decoration: none;
+            font-size: 1.5em;
+        }
+
+        footer .social-links a:hover {
+            color: #1abc9c;
         }
 
         form {
@@ -149,6 +164,12 @@
         form button:hover {
             background: #16a085;
         }
+        /* Tambahan CSS untuk ikon sosial media */
+footer .social-links a {
+    margin: 0 0.5em;
+    display: inline-block;
+}
+
 
         @media (max-width: 768px) {
             header img {
@@ -171,7 +192,6 @@
         <h1>Muhyi Sadewo</h1>
         <p>Selamat datang di situs MUHYI SADEWO,</p>
         <img src="https://drive.google.com/uc?export=view&id=1Oy-mEdDSyXQUcL1lxEVS-NRcaetzMBrl" alt="Foto Profil Muhyi Sadewo">
-
     </header>
 
     <nav>
@@ -226,6 +246,21 @@
 
     <footer>
         <p>&copy; 2024 Muhyi Sadewo. Semua Hak Dilindungi.</p>
+        <div class="social-links">
+            <a href="https://www.instagram.com/username" target="_blank" title="Instagram">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" style="width: 24px; height: 24px;">
+            </a>
+            <a href="https://www.tiktok.com/@username" target="_blank" title="TikTok">
+                <img src="https://www.iconfinder.com/icons/4362958/tiktok_logo_social_media_icon" alt="TikTok" style="width: 24px; height: 24px;">
+            </a>
+            <a href="https://www.youtube.com/channel/username" target="_blank" title="YouTube">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube" style="width: 24px; height: 24px;">
+            </a>
+            <a href="https://www.facebook.com/username" target="_blank" title="Facebook">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" style="width: 24px; height: 24px;">
+            </a>
+        </div>
     </footer>
+    
 </body>
 </html>
