--- a/index.html
+++ b/index.html
@@ -247,16 +247,16 @@ footer .social-links a {
     <footer>
         <p>&copy; 2024 Muhyi Sadewo. Semua Hak Dilindungi.</p>
         <div class="social-links">
-            <a href="https://www.instagram.com/username" target="_blank" title="Instagram">
+            <a href="https://www.instagram.com/m_hyee3?igsh=MWozd3VkeTg5dmRiNg==" target="_blank" title="Instagram">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" style="width: 24px; height: 24px;">
             </a>
-            <a href="https://www.tiktok.com/@username" target="_blank" title="TikTok">
+            <a href="https://www.tiktok.com/@hye_sa?_t=8obBppLQCUq&_r=1" target="_blank" title="TikTok">
                 <img src="https://www.iconfinder.com/icons/4362958/tiktok_logo_social_media_icon" alt="TikTok" style="width: 24px; height: 24px;">
             </a>
-            <a href="https://www.youtube.com/channel/username" target="_blank" title="YouTube">
+            <a href="https://www.youtube.com/@ibnuhakim7775" target="_blank" title="YouTube">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube" style="width: 24px; height: 24px;">
             </a>
-            <a href="https://www.facebook.com/username" target="_blank" title="Facebook">
+            <a href="https://www.facebook.com/muhyi.din.357?mibextid=ZbWKwL" target="_blank" title="Facebook">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" style="width: 24px; height: 24px;">
             </a>
         </div>
