--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ footer .social-links a {
 <body>
     <header>
         <h1>Muhyi Sadewo</h1>
-        <p>Selamat datang di situs MUHYI SADEWO,</p>
+        <p>Selamat datang di Website MUHYI SADEWO,</p>
         <img src="https://drive.google.com/uc?export=view&id=1Oy-mEdDSyXQUcL1lxEVS-NRcaetzMBrl" alt="Foto Profil Muhyi Sadewo">
     </header>
 
@@ -204,8 +204,8 @@ footer .social-links a {
 
     <section id="about">
         <h2>Tentang Saya</h2>
-        <p>Pendidikan: PP buq Demak</p>
-        <h3>Keterampilan</h3>
+        <p>Pendidikan: Pondok Pesantren APIS Sanan gondang Blitar & Pondok Pesantren Bustanu `Usysyaqil Quran Betengan Demak</p>
+        <h3>My Skill</h3>
         <ul>
             <li>HTML</li>
             <li>CSS</li>
@@ -215,9 +215,9 @@ footer .social-links a {
     </section>
 
     <section id="portfolio">
-        <h2>Proyek Portofolio</h2>
+        <h2>Portofolio</h2>
         <div class="project">
-            <h3>Buat Portofolio Pribadi</h3>
+            <h3>Menerima Buat Portofolio Pribadi</h3>
             <p>Silahkan dicoba</p>
             <p>Teknologi yang Digunakan: HTML, CSS, JavaScript</p>
             <p>Status: Online</p>
