--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ footer .social-links a {
 
     <section id="about">
         <h2>Tentang Saya</h2>
-        <p>Pendidikan: Pondok Pesantren APIS Sanan gondang Blitar & Pondok Pesantren Bustanu `Usysyaqil Quran Betengan Demak</p>
+        <p>Pendidikan: Pondok Pesantren APIS Sanan gondang Blitar & Pondok Pesantren Bustanu `Usysyaqil Qur`an Betengan Demak</p>
         <h3>My Skill</h3>
         <ul>
             <li>HTML</li>
