--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ footer .social-links a {
     <header>
         <h1>Muhyi Sadewo</h1>
         <p>Selamat datang di Website MUHYI SADEWO,</p>
-        <img src="https://drive.google.com/uc?export=view&id=1Oy-mEdDSyXQUcL1lxEVS-NRcaetzMBrl" alt="Foto Profil Muhyi Sadewo">
+        <img src="https://photos.app.goo.gl/LgZJtpEc3sUutzYNA">
     </header>
 
     <nav>
