--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ footer .social-links a {
     <header>
         <h1>Muhyi Sadewo</h1>
         <p>Selamat datang di Website MUHYI SADEWO,</p>
-        <img src="https://photos.app.goo.gl/LgZJtpEc3sUutzYNA">
+        <img src="https://photos.app.goo.gl/G2qtCBDeXW2ureFGA">
     </header>
 
     <nav>
